# cuda-usd-ball-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: simulation.cuh
src/: main.cu  simulation.cu  usd_loader.cpp  usd_loader.hpp
usd_writer/: combine_frames_to_animated_usd.py  usd_writer.py
